feat: add api support for editing existing decks
